cudaq/test/Transforms/mapping_disconnected_errors.qke
// ========================================================================== //
// Copyright (c) 2026 NVIDIA Corporation & Affiliates.                        //
// All rights reserved.                                                       //
//                                                                            //
// This source code and the accompanying materials are made available under   //
// the terms of the Apache License 2.0 which accompanies this distribution.   //
// ========================================================================== //

// RUN: cudaq-opt '--qubit-mapping=device=file(%S/mapping_disconnected_isolated.txt) placement=greedy search=none raise-fatal-errors=1' %s -verify-diagnostics

quake.wire_set @wires[2147483647]

// expected-error @+1 {{cannot place two-qubit interaction between virtual qubits 0 and 1 on disconnected device topology}}
func.func @bell_isolated() {
  %q0 = quake.borrow_wire @wires[0] : !quake.wire
  %q1 = quake.borrow_wire @wires[1] : !quake.wire
  %0 = quake.h %q0 : (!quake.wire) -> !quake.wire
  %1:2 = quake.x [%0] %q1 : (!quake.wire, !quake.wire) -> (!quake.wire, !quake.wire)
  quake.return_wire %1#0 : !quake.wire
  quake.return_wire %1#1 : !quake.wire
  return
}
